// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search Actions 1. verify search action 1`] = `
Object {
  "delay": undefined,
  "event": null,
  "mode": 1,
  "params": "AB,_EQ",
  "prevIndex": 0,
  "scrip": "ab",
  "type": "SEARCH",
}
`;

exports[`Search Actions 2. verify clearSearchState action 1`] = `
Object {
  "type": "CLEAR_SEARCH_STATE",
}
`;

exports[`Search Actions 3. verify clearState action 1`] = `
Object {
  "type": "CLEAR_RESULT",
}
`;

exports[`Search Actions 4. verify setSearchText action 1`] = `
Object {
  "key": undefined,
  "payload": "ab",
  "type": "SET_SEARCH_TEXT",
}
`;

exports[`Search Actions 5. verify setTab action 1`] = `
Object {
  "payload": 1,
  "type": "SET_SELECTED_TAB",
}
`;

exports[`Search Actions 6. verify search action 1`] = `
Object {
  "delay": undefined,
  "event": null,
  "mode": 0,
  "params": "AB",
  "prevIndex": 1,
  "scrip": "ab",
  "type": "SEARCH",
}
`;

exports[`Search Actions 7. verify search action 1`] = `
Object {
  "delay": undefined,
  "event": null,
  "mode": 2,
  "params": "AB,_FNO",
  "prevIndex": 3,
  "scrip": "ab",
  "type": "SEARCH",
}
`;

exports[`Search Actions 8. verify search action 1`] = `
Object {
  "delay": undefined,
  "event": null,
  "mode": 3,
  "params": "AB,CUR_",
  "prevIndex": 4,
  "scrip": "ab",
  "type": "SEARCH",
}
`;

exports[`Search Actions 9. verify search action 1`] = `
Object {
  "delay": undefined,
  "event": null,
  "mode": 4,
  "params": "AB,COM_",
  "prevIndex": 2,
  "scrip": "ab",
  "type": "SEARCH",
}
`;

exports[`Search Actions 10. verify addStock action 1`] = `
Object {
  "onError": [MockFunction],
  "onSuccess": [MockFunction],
  "payload": Object {
    "watchlistId": 3000403,
    "watchlistName": "WatchlistOne",
    "wtoken": 727,
  },
  "type": "ADD_STOCK",
}
`;

exports[`Search Actions 11. verify addStockToRecent action 1`] = `
Object {
  "payload": Object {
    "watchlistId": 3000403,
    "watchlistName": "recent",
    "wtoken": 727,
  },
  "type": "ADD_RECENTSTOCK",
}
`;

exports[`Search Actions 12. verify deleteStock action 1`] = `
Object {
  "onError": [MockFunction],
  "onSuccess": [MockFunction],
  "payload": Object {
    "watchlistId": 3000403,
    "watchlistName": "WatchlistOne",
    "wtoken": 727,
  },
  "type": "DELETE_STOCK",
}
`;
